update our team text

--- a/_config.yaml
+++ b/_config.yaml
@@ -11,7 +11,7 @@ baseurl: /yang-luo-lab
 # site social media and other links
 links:
   email: yang.luo@kennedy.ox.ac.uk
-  github: https://github.com/yang-luo-lab
+  github: yang-luo-lab
   twitter: yluo86
 
 ### advanced settings
