--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -2,29 +2,17 @@
   image: https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fs41588-021-00935-7/MediaObjects/41588_2021_935_Fig1_HTML.png
   date: 2021-10-5
   extra-links:
-    - type: source
+    - type: source code
+      text: A large multi-ancestry HLA imputation reference panel that helps identifying causal disease variations.
       link: https://github.com/yang-luo-lab/HLA-TAPAS
 
 
-- id: doi:10.1016/j.csbj.2020.05.017
-  image: https://ars.els-cdn.com/content/image/1-s2.0-S2001037020302804-gr1.jpg
-  date: 2020-6-2
+- id: PMID: 33987664
+  image: https://www.ncbi.nlm.nih.gov/pmc/articles/instance/8330913/bin/ddab130f1.jpg
   extra-links:
-    - type: source
-      link: https://greenelab.github.io/knowledge-graph-review/
-  tags:
-    - knowledge graphs
-
-- id: doi:10.1371/journal.pcbi.1007128
-  image: https://journals.plos.org/ploscompbiol/article/figure/image?size=inline&id=info:doi/10.1371/journal.pcbi.1007128.g001&rev=2
-  repo: greenelab/meta-review
-  extra-links:
-    - type: manubot
-      link: https://greenelab.github.io/meta-review/
-    - type: source
-      link: https://github.com/greenelab/meta-review
-    - type: website
-      link: http://manubot.org/
+    - type: source code
+      link: https://github.com/yang-luo-lab/cov-ldsc
+      text: A method to provide robust hg2 estimates from GWAS summary statistics and in-sample LD estimates in admixed populations.
 
 - id: doi:10.7554/eLife.32822
   image: https://iiif.elifesciences.org/lax:32822%2Felife-32822-fig8-v3.tif/full/863,/0/default.webp
