adding dna svg (new logo)

--- a/_config.yaml
+++ b/_config.yaml
@@ -3,7 +3,7 @@
 # site properties and page defaults
 title: Luo Lab @ Oxford
 description: An easy-to-use, flexible website template for labs, with automatic citations, GitHub tag imports, pre-built components, and more.
-logo: images/logo.svg
+logo: images/dna-svgrepo-com.svg
 header: images/background.jpg
 footer: images/background.jpg
 #baseurl: /yang-luo-lab
