change background image

--- a/_config.yaml
+++ b/_config.yaml
@@ -4,8 +4,8 @@
 title: Luo Lab @ Oxford
 description: An easy-to-use, flexible website template for labs, with automatic citations, GitHub tag imports, pre-built components, and more.
 logo: images/dna-svgrepo-com.svg
-header: images/background.jpg
-footer: images/background.jpg
+header: images/Oxford_DNA.jpg
+footer: images/Oxford_DNA.jpg
 #baseurl: /yang-luo-lab
 
 # site social media and other links
