--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -7,10 +7,10 @@
       link: https://github.com/yang-luo-lab/HLA-TAPAS
 
 
-- id: pmid: 33987664
-  image: https://www.ncbi.nlm.nih.gov/pmc/articles/instance/8330913/bin/ddab130f1.jpg
-  date: 2021-08-15
-  extra-links:
-    - type: source code
-      link: https://github.com/yang-luo-lab/cov-ldsc
-      text: A method to provide robust hg2 estimates from GWAS summary statistics and in-sample LD estimates in admixed populations.
+# - id: pmid: 33987664
+#   image: https://www.ncbi.nlm.nih.gov/pmc/articles/instance/8330913/bin/ddab130f1.jpg
+#   date: 2021-08-15
+#   extra-links:
+#     - type: source code
+#       link: https://github.com/yang-luo-lab/cov-ldsc
+#       text: A method to provide robust hg2 estimates from GWAS summary statistics and in-sample LD estimates in admixed populations.
