--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -2,15 +2,24 @@
   image: https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fs41588-021-00935-7/MediaObjects/41588_2021_935_Fig1_HTML.png
   date: 2021-10-5
   extra-links:
-    - type: source code
+    - type: source
       text: A large multi-ancestry HLA imputation reference panel that helps identifying causal disease variations.
       link: https://github.com/yang-luo-lab/HLA-TAPAS
 
-
-- id: doi:10.1093/hmg/ddab130
+# covldsc
+- id: pmc:PMC8330913
   image: https://www.ncbi.nlm.nih.gov/pmc/articles/instance/8330913/bin/ddab130f1.jpg
   date: 2021-08-15
   extra-links:
-    - type: source code
+    - type: source
       link: https://github.com/yang-luo-lab/cov-ldsc
       text: A method to provide robust hg2 estimates from GWAS summary statistics and in-sample LD estimates in admixed populations.
+
+# flot1
+- id: doi:10.1101/2022.02.07.22270622
+ # image: https://www.ncbi.nlm.nih.gov/pmc/articles/instance/8330913/bin/ddab130f1.jpg
+  date: 2022-02-08
+  extra-links:
+    - type: data
+      link: https://github.com/immunogenomics/TB-g2g
+      text: identify host-pathogen interaction at genomic level
