--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,25 +1,38 @@
+# hla
 - id: doi:10.1038/s41588-021-00935-7
   image: https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fs41588-021-00935-7/MediaObjects/41588_2021_935_Fig1_HTML.png
   date: 2021-10-5
   extra-links:
     - type: source
-      text: A large multi-ancestry HLA imputation reference panel that helps identifying causal disease variations.
+      text: Bioinformatic pipeline
       link: https://github.com/yang-luo-lab/HLA-TAPAS
 
 # covldsc
 - id: pmc:PMC8330913
   image: https://www.ncbi.nlm.nih.gov/pmc/articles/instance/8330913/bin/ddab130f1.jpg
-  date: 2021-08-15
+  date:2021-08-15
   extra-links:
     - type: source
       link: https://github.com/yang-luo-lab/cov-ldsc
-      text: A method to provide robust hg2 estimates from GWAS summary statistics and in-sample LD estimates in admixed populations.
+      text: Source code
 
 # flot1
 - id: doi:10.1101/2022.02.07.22270622
  # image: https://www.ncbi.nlm.nih.gov/pmc/articles/instance/8330913/bin/ddab130f1.jpg
-  date: 2022-02-08
+  date:2022-02-08
   extra-links:
     - type: data
-      link: https://github.com/immunogenomics/TB-g2g
-      text: identify host-pathogen interaction at genomic level
+      link: https://github.com/yang-luo-lab/TB-g2g
+      text: Reproducing results from manuscript
+
+# Peruvian TB GWAS
+- id: doi:10.1038/s41467-019-11664-1
+  image: https://www.ncbi.nlm.nih.gov/corecgi/tileshop/tileshop.fcgi?p=PMC3&id=493290&s=91&r=2&c=2
+  date:2019-08-21
+  extra-link:
+    - type: data
+      text: Summary statistics
+      link: https://www.ebi.ac.uk/gwas/downloads/summary-statistics
+    - type: soure
+      text: Reproducing results from manuscript
+      link: https://github.com/yang-luo-lab/TB_progression_GWAS
