--- a/_config.yaml
+++ b/_config.yaml
@@ -37,10 +37,10 @@ defaults:
     values:
       layout: member
   # markdown files in /_posts
-  - scope:
-      type: "posts"
-    values:
-      layout: post
+  # - scope:
+  #     type: "posts"
+  #   values:
+  #     layout: post
 
 # collections
 collections:
