--- a/_data/tools.yaml
+++ b/_data/tools.yaml
@@ -1,4 +1,4 @@
-- title: Cool Dataset
+- title: HLA-TAPAS
   subtitle: a subtitle
   group: featured
   image: images/photo.jpg
@@ -8,15 +8,15 @@
   tags:
     - resource
 
-- title: Cool Package
-  subtitle: a subtitle
+- title: cov-LDSC
+  subtitle: covariate-adjusted LD score regression
   group: featured
-  image: images/photo.jpg
-  link: https://github.com/
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  repo: greenelab/lab-website-template
+  image: images/cov-LDSC.png
+  link: https://github.com/yang-luo-lab/cov-ldsc
+  description: cov-LDSC is a method to provide robust hg2 estimates from GWAS summary statistics and in-sample LD estimates in admixed populations. 
+  repo: yang-luo-lab/cov-ldsc
   tags:
-    - resource
+    - software
 
 - title: Cool Tutorial
   group: more
