--- a/_config.yaml
+++ b/_config.yaml
@@ -3,9 +3,9 @@
 # site properties and page defaults
 title: Luo Lab @ Oxford
 #description: An easy-to-use, flexible website template for labs, with automatic citations, GitHub tag imports, pre-built components, and more.
-logo: images/dna-svgrepo-com.svg
-header: images/Oxford_DNA.jpg
-footer: images/Oxford_DNA.jpg
+logo: images/Lab_logo.jpg
+header: images/Lab_logo.jpg
+footer: images/Lab_logo.jpg
 #baseurl: /yang-luo-lab
 
 # site social media and other links
