change logo size

--- a/_config.yaml
+++ b/_config.yaml
@@ -4,6 +4,8 @@
 title: Luo Lab @ Oxford
 #description: An easy-to-use, flexible website template for labs, with automatic citations, GitHub tag imports, pre-built components, and more.
 logo: images/Lab_logo.jpg
+width:1024
+height:768
 header: images/Lab_logo.jpg
 footer: images/Lab_logo.jpg
 #baseurl: /yang-luo-lab
