--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,3 +1,6 @@
+# scHLApers
+- id: doi:10.1038/s41588-023-01586-6
+  date: 2023-11-30
 # hla
 - id: doi:10.1038/s41588-021-00935-7
   image: https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fs41588-021-00935-7/MediaObjects/41588_2021_935_Fig1_HTML.png
