--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,5 +1,13 @@
+
+#eBL
+- id: doi:10.1038/s42003-023-05701-5
+  date: 2024-01-5
+  image: https://www.nature.com/articles/s42003-023-05701-5/figures/1
+  
 # scHLApers
 - id: doi:10.1038/s41588-023-01586-6
+  date: 2023-11-30
+  image: https://github.com/immunogenomics/scHLApers/blob/main/images/overview.png
 
 # hla
 - id: doi:10.1038/s41588-021-00935-7
