--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -2,6 +2,7 @@
 #eBL
 - id: doi:10.1038/s42003-023-05701-5
   date: 2024-01-5
+  image: https://github.com/immunogenomics/scHLApers/blob/main/images/overview.png
 
 # scHLApers
 - id: doi:10.1038/s41588-023-01586-6
@@ -33,7 +34,7 @@
 # flot1
 - id: doi:10.1101/2022.02.07.22270622
   image: images/g2g_overview.svg
-  #date:2022-02-08
+  date: 2022-02-08
   extra-links:s
     - type: data
       link: https://github.com/yang-luo-lab/TB-g2g
@@ -42,7 +43,7 @@
 # Peruvian TB GWAS
 - id: doi:10.1038/s41467-019-11664-1
   image: https://www.ncbi.nlm.nih.gov/corecgi/tileshop/tileshop.fcgi?p=PMC3&id=493290&s=91&r=2&c=2
-  #date:2019-08-21
+  date: 2019-08-21
   extra-links:
     - type: data
       text: Summary statistics
