--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -35,7 +35,7 @@
 - id: doi:10.1101/2022.02.07.22270622
   image: images/g2g_overview.svg
   date: 2022-02-08
-  extra-links:s
+  extra-links:
     - type: data
       link: https://github.com/yang-luo-lab/TB-g2g
       text: Reproducing results from manuscript
