--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -48,7 +48,9 @@ jobs:
           JEKYLL_ENV: production
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
-        uses: actions/upload-pages-artifact@v1
+        # uses: actions/upload-pages-artifact@v1 # old version- seems to be deprecated
+        uses: actions/upload-artifact@v4
+
 
   # Deployment job
   deploy:
