--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,4 +1,11 @@
-
+# TB genome-to-genome
+- id: https://doi.org/10.1038/s41467-024-54741-w
+  date: 2024-11-29
+  image: images/g2g_overview.svg
+  extra-links:
+    - type: data
+      link: https://github.com/yang-luo-lab/TB-g2g
+      text: Reproducing results from manuscript
 #eBL
 - id: doi:10.1038/s42003-023-05701-5
   date: 2024-01-5
@@ -31,14 +38,6 @@
       link: https://github.com/yang-luo-lab/cov-ldsc
       text: Source code
 
-# flot1
-- id: doi:10.1101/2022.02.07.22270622
-  image: images/g2g_overview.svg
-  date: 2022-02-08
-  extra-links:
-    - type: data
-      link: https://github.com/yang-luo-lab/TB-g2g
-      text: Reproducing results from manuscript
 
 # Peruvian TB GWAS
 - id: doi:10.1038/s41467-019-11664-1
