--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -42,6 +42,10 @@ jobs:
           ruby-version: 2.7.8 # supported by GitHub Pages' build environment
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.10
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v2
