--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,3 +1,12 @@
+# HLA-TCR
+- id:DOI: 10.1126/sciadv.adu3461
+  date: 2024-12-06
+  image: images/HLA-TCR.png
+  extra-links:
+    - type: data
+      link: https://github.com/yang-luo-lab/TCR-HLA
+      text: Reproducing results from manuscript
+
 # TB genome-to-genome
 - id: https://doi.org/10.1038/s41467-024-54741-w
   date: 2024-11-29
@@ -6,6 +15,7 @@
     - type: data
       link: https://github.com/yang-luo-lab/TB-g2g
       text: Reproducing results from manuscript
+
 #eBL
 - id: doi:10.1038/s42003-023-05701-5
   date: 2024-01-5
