--- a/.github/workflows/auto-cite.yaml
+++ b/.github/workflows/auto-cite.yaml
@@ -24,9 +24,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: 3.7
+          python-version: '3.10'
       - name: Install packages
         run: python -m pip install --upgrade --requirement ./auto-cite/requirements.txt
       - name: Build updated citations
