--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,9 +6,10 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
 
     steps:
+        
       - uses: actions/checkout@v4
 
       - name: Set up Ruby
@@ -16,6 +17,10 @@ jobs:
         with:
           ruby-version: 2.7.8
 
+      - uses: actions/setup-python@v5
+        with:
+            python-version: '3.10'
+            
       - name: Print Ruby & Bundler version
         run: |
           ruby -v
