--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,4 +33,9 @@ jobs:
           bundle install --jobs 4 --retry 3 --verbose
 
       - name: Build site
-        run: bundle exec jekyll build
+        run: bundle exec jekyll build --baseurl ""
+        env:
+          JEKYLL_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PAGES_REPO_NWO: ${{ github.repository }}    
+    
+    
