--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -71,7 +71,6 @@ jobs:
     needs: build
     steps:
       - name: Deploy to GitHub Pages
-        id: deployment
         uses: actions/deploy-pages@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          artifact_name: github-pages
