update lab photos

--- a/_config.yaml
+++ b/_config.yaml
@@ -13,7 +13,7 @@ url: https://yang-luo-lab.github.io
 links:
   email: yang.luo@kennedy.ox.ac.uk
   github: yang-luo-lab
-  twitter: yluo86
+  bluesky: y-luo.bsky.social
 
 ### advanced settings
 
