--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -33,7 +33,7 @@
   image: https://github.com/immunogenomics/scHLApers/blob/main/images/overview.png
 
 
-# hla
+# hla tapas
 - id: doi:10.1038/s41588-021-00935-7
   image: https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fs41588-021-00935-7/MediaObjects/41588_2021_935_Fig1_HTML.png
   date: 2021-10-5
