update doi to correct funky links:

--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -2,7 +2,7 @@
 # See https://github.com/greenelab/lab-website-template/wiki/Citations
 
 - id:DOI: 10.1126/sciadv.adu3461
-  date: ''
+  date: '2025'
   image: images/HLA-TCR.png
   extra-links:
   - type: data
