--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -9,7 +9,7 @@
       text: Reproducing results from manuscript
 
 # COMBAT eQTL
-- id: doi:https://doi.org/10.1101/2025.06.30.25330463
+- id: doi:10.1101/2025.06.30.25330463
   date: 2025-06-30
   image: images/combat-eQTL.png
 
@@ -25,7 +25,7 @@
 #eBL
 - id: doi:10.1038/s42003-023-05701-5
   date: 2024-01-5
-  image: https://github.com/immunogenomics/scHLApers/blob/main/images/overview.png
+  image: images/eBL_overview.png
 
 # scHLApers
 - id: doi:10.1038/s41588-023-01586-6
