--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,7 +1,6 @@
 
 # HLA-TCR
 - id: doi:10.1126/sciadv.adu3461
-  date: 2025-07-25
   image: images/HLA-TCR.png
   extra-links:
     - type: data
@@ -10,12 +9,10 @@
 
 # COMBAT eQTL
 - id: doi:10.1101/2025.06.30.25330463
-  date: 2025-06-30
   image: images/combat-eQTL.png
 
 # TB genome-to-genome
 - id: pmid:39613754
-  date: 2024-11-29
   image: images/g2g_overview.svg
   extra-links:
     - type: data
@@ -24,19 +21,16 @@
 
 #eBL
 - id: doi:10.1038/s42003-023-05701-5
-  date: 2024-01-5
-  image: images/eBL_overview.png
+  image: images/eBL_HLA.png
 
 # scHLApers
 - id: doi:10.1038/s41588-023-01586-6
-  date: 2023-11-3
   image: https://github.com/immunogenomics/scHLApers/blob/main/images/overview.png
 
 
 # hla tapas
 - id: doi:10.1038/s41588-021-00935-7
   image: https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fs41588-021-00935-7/MediaObjects/41588_2021_935_Fig1_HTML.png
-  date: 2021-10-5
   extra-links:
     - type: source
       text: source code
@@ -44,7 +38,6 @@
 
 # covldsc
 - id: pmc:PMC8330913
-  date: 2021-05-13
   image: https://www.ncbi.nlm.nih.gov/pmc/articles/instance/8330913/bin/ddab130f1.jpg
   extra-links:
     - type: source
@@ -55,7 +48,6 @@
 # Peruvian TB GWAS
 - id: doi:10.1038/s41467-019-11664-1
   image: https://www.ncbi.nlm.nih.gov/corecgi/tileshop/tileshop.fcgi?p=PMC3&id=493290&s=91&r=2&c=2
-  date: 2019-08-21
   extra-links:
     - type: data
       text: Summary statistics
