--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -11,6 +11,10 @@
 - id: doi:10.1101/2025.06.30.25330463
   image: images/combat-eQTL.png
 
+# smoking review
+- id: doi:10.1038/d41586-024-00232-3
+  image: images/smoke_review.png
+
 # TB genome-to-genome
 - id: pmid:39613754
   image: images/g2g_overview.svg
@@ -25,7 +29,7 @@
 
 # scHLApers
 - id: doi:10.1038/s41588-023-01586-6
-  image: https://github.com/immunogenomics/scHLApers/blob/main/images/overview.png
+  image: https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fs41588-023-01586-6/MediaObjects/41588_2023_1586_Fig1_HTML.png?as=webp
 
 
 # hla tapas
